fixed overflow issue

--- a/CSS/information-styles.css
+++ b/CSS/information-styles.css
@@ -1,8 +1,9 @@
+
 .main-content{
     display: flex;
     flex-flow: column;
     justify-content: center;
-    align-items: left;
+    align-items: center;
     width:100%;
     height:100%;
     margin-top:10px;
@@ -11,7 +12,9 @@
 }
 p{
     font-family:Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
+    max-width: 1400px;
+    
 }
 .image{
     display: flex;
