--- a/CSS/nav-styles.css
+++ b/CSS/nav-styles.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     font-family: monospace;
+
+    overflow-x:hidden;
 }
 #current{
     color:black;
@@ -16,7 +18,6 @@ body{
     background-color: rgba(127,127,127,0.5);
     color:black;
     border-bottom: 1px solid black;
-    position: relative;
 }
 .logo{
     display: flex;
